<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_margin="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <LinearLayout
        android:background="@drawable/fragment_background"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <ImageView
            android:id="@+id/poster_top"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:padding="14sp"
            android:src="@mipmap/temp_back_img"
            />

        <TextView
            android:id="@+id/title_name_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryTextYellow"
            android:layout_margin="8sp"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="160sp">

            <TableLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textColor="@color/colorPrimaryTextYellow"
                        android:layout_gravity="center"
                        android:layout_marginStart="14sp"
                        android:textSize="16sp"
                        android:text="@string/release_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <TextView
                        android:text="01.01.2605"
                        android:id="@+id/release_year_2"
                        android:layout_margin="8sp"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>
                <TextView
                    android:gravity="center"
                    android:layout_margin="12sp"
                    android:textColor="@color/colorPrimaryTextYellow"
                    android:textSize="16sp"
                    android:text="@string/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4sp"
                    >
                    <ImageView
                        android:id="@+id/star1"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/yellow_star" />

                    <ImageView
                        android:id="@+id/star2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/yellow_star" />

                    <ImageView
                        android:id="@+id/star3"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/yellow_star" />

                    <ImageView
                        android:id="@+id/star4"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/yellow_star" />

                    <ImageView
                        android:id="@+id/star5"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/yellow_star" />



                </LinearLayout>

            </TableLayout>

            <ImageView
                android:id="@+id/image_logo"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/temp_reg_photo"
                />



        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/story"
            android:textSize="22sp"
            android:textColor="@color/colorPrimaryTextYellow"

            />

        <TextView
            android:id="@+id/story_2"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:text="@string/story_full"
            android:layout_margin="12sp"
            android:paddingLeft="12sp"
            android:paddingRight="12sp"

            />

        <TextView
            android:id="@+id/trailer_txt"

            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="8sp"
            android:text="@string/trailer"
            android:textSize="22sp"
            android:textColor="@color/colorPrimaryTextYellow"
            />




    </LinearLayout>

</ScrollView>