<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/fragment_main_container"

        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fragment_background"
        >


        <ImageView
            android:layout_margin="12sp"
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="175sp"
            android:src="@mipmap/app_logo"
            />

        <TextView
            android:id="@+id/title_name"

            android:textSize="28sp"
            android:textColor="@color/colorPrimaryTextYellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="start"
                android:text="@string/genre"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:gravity="start"
                android:textSize="18sp"
                android:text="Drama" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical"
                android:gravity="center"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="start"
                    android:text="@string/released_date"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/release_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:gravity="start"
                    android:textSize="18sp"
                    android:text="01/05/1255"
                     />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_margin="4sp"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <ImageView
                    android:id="@+id/star1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/yellow_star" />

                <ImageView
                    android:id="@+id/star2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/yellow_star" />

                <ImageView
                    android:id="@+id/star3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/yellow_star" />

                <ImageView
                    android:id="@+id/star4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/yellow_star" />

                <ImageView
                    android:id="@+id/star5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/yellow_star" />


            </LinearLayout>

            <Button
                android:visibility="gone"

                android:background="@android:color/transparent"
                android:text="@string/link"
                android:id="@+id/btn_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



        </LinearLayout>

    </LinearLayout>

</ScrollView>